# video-work-api

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  config.env.example
.agents/skills/video-work-api/: SKILL.md
.agents/skills/video-work-api/references/: api.md  operations.md
design-demos/video-project-editor/: design-spec.md  editorial-production-desk.html  live-agent-split-view.html  native-code-workbench.html
packaging/: README.md
packaging/aur/video-work-api-git/: .SRCINFO  PKGBUILD  video-work-api-git.install
scripts/: cosyvoice_infer.py  download_madlad_model.py  download_model.py  madlad_translate.py  requirements-runtime.txt  video_media_job.py  video_project_render.py  vwactl
src/: alignment.rs  audio.rs  config.rs  cover.rs  database.rs  engine.rs  error.rs  filenames.rs  importer.rs  lib.rs  lifecycle.rs  main.rs  mcp.rs  mcp_token.rs  model.rs  passkeys.rs  paths.rs  project_render.rs  provenance.rs  quality.rs  render_queue.rs  sampling.rs  security.rs  studio.rs  subtitles.rs  timeline.rs  translation.rs  video_editor.rs  vpe.rs
src/http/: limiter.rs  mod.rs  routes.rs
static/: agent-prompt.js  app.js  batch-core.js  docs.html  editor.css  editor.html  editor.js  index.html  styles.css  theme.js
systemd/: video-work-api.service
tests/: api_smoke.rs  browser_editor_smoke.js  cli_contract.rs  static_agent_prompt_behavior.js  static_batch_behavior.js  static_batch_contract.rs  static_editor_behavior.js  static_editor_contract.rs  test_video_media_job.py  video_project_render.rs
(+1 files in other folders)
